Fixed right align
Fixed missing '='

Fixed fucking right align

--- a/src/HUD/Players/players.scss
+++ b/src/HUD/Players/players.scss
@@ -56,6 +56,7 @@
     }
     &.right {
         right: 10px;
+        align-items: flex-end;
         .player {
             flex-direction: row-reverse;
             .dead-stats {
